Cleaned Project from experimental packages.

--- a/mygelb/Umbraco/Config/Lang/cs.xml
+++ b/mygelb/Umbraco/Config/Lang/cs.xml
@@ -375,7 +375,8 @@
     <key alias="showPageOnSend">Zobrazit stránku při odeslání</key>
     <key alias="size">Rozměr</key>
     <key alias="sort">Seřadit</key>
-    <key alias="submit">Submit</key> <!-- TODO: Translate this -->
+    <key alias="submit">Submit</key>
+    <!-- TODO: Translate this -->
     <key alias="type">Typ</key>
     <key alias="typeToSearch">Pro hledání pište...</key>
     <key alias="up">Nahoru</key>
@@ -658,11 +659,9 @@
     <key alias="paSimpleHelp">Jestliže chcete nastavit jenom jednoduchou ochranu prostřednictvím uživatelského jména a hesla</key>
   </area>
   <area alias="publish">
-    <key alias="contentPublishedFailedAwaitingRelease">
-      <![CDATA[
+    <key alias="contentPublishedFailedAwaitingRelease"><![CDATA[
       %0% nemůže být publikována, protože položka je naplánovaná k uvolnění.
-    ]]>
-    </key>
+    ]]></key>
     <key alias="contentPublishedFailedInvalid"><![CDATA[
       %0% nemůže být publikována, protože tyto vlastnosti: %1%  nesplňují validační pravidla.
     ]]></key>
@@ -830,15 +829,12 @@
     <key alias="addElement">Add content</key>
     <key alias="dropElement">Drop content</key>
     <key alias="settingsApplied">Settings applied</key>
-
     <key alias="contentNotAllowed">This content is not allowed here</key>
     <key alias="contentAllowed">This content is allowed here</key>
-
     <key alias="clickToEmbed">Click to embed</key>
     <key alias="clickToInsertImage">Click to insert image</key>
     <key alias="placeholderImageCaption">Image caption...</key>
     <key alias="placeholderWriteHere">Write here...</key>
-
     <key alias="gridLayouts">Grid Layouts</key>
     <key alias="gridLayoutsDetail">Layouts are the overall work area for the grid editor, usually you only need one or two different layouts</key>
     <key alias="addGridLayout">Add Grid Layout</key>
