--- a/mygelb/Umbraco/Config/Lang/de.xml
+++ b/mygelb/Umbraco/Config/Lang/de.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <language alias="de" intName="German (DE)" localName="Deutsch (DE)" lcid="7" culture="de-DE">
   <creator>
     <name>The Umbraco community</name>
@@ -390,7 +390,8 @@
     <key alias="showPageOnSend">Seite beim Senden anzeigen</key>
     <key alias="size">Größe</key>
     <key alias="sort">Sortieren</key>
-    <key alias="submit">Submit</key> <!-- TODO: Translate this -->
+    <key alias="submit">Submit</key>
+    <!-- TODO: Translate this -->
     <key alias="type">Typ</key>
     <key alias="typeToSearch">Durchsuchen ...</key>
     <key alias="up">nach oben</key>
@@ -565,8 +566,7 @@ Wenn Sie sich für Runway entscheiden, können Sie optional Blöcke nutzen, die 
       Einen schönen Tag wünscht
       Ihr freundlicher Umbraco-Robot
     </key>
-    <key alias="mailBodyHtml">
-<![CDATA[<p>Hallo %0%</p>
+    <key alias="mailBodyHtml"><![CDATA[<p>Hallo %0%</p>
 		  <p>Dies ist eine automatisch E-Mail, welche Sie informiert, dass die Aufgabe <strong>'%1%'</strong> 
 		  an der Seite <a href="http://%4%/#/content/content/edit/%5%"><strong>'%2%'</strong></a>
 		  vom Benutzer <strong>'%3%'</strong> ausgeführt wurde.
@@ -592,8 +592,7 @@ Wenn Sie sich für Runway entscheiden, können Sie optional Blöcke nutzen, die 
 		  <p>Einen schönen Tag wünscht<br /><br />
 			  Ihr freundlicher Umbraco-Robot
 		  </p>
-]]>
-</key>
+]]></key>
     <key alias="mailSubject">[%0%] Benachrichtigung: %1% ausgeführt an Seite '%2%' </key>
     <key alias="notifications">Benachrichtigungen</key>
   </area>
